Bug 234960 - Transitions without an explicit property-name should not be considered
Summary: Transitions without an explicit property-name should not be considered
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Animations (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antoine Quint
URL:
Keywords: InRadar, WebExposed
Depends on:
Blocks: 235130
  Show dependency treegraph
 
Reported: 2022-01-07 08:28 PST by Antoine Quint
Modified: 2022-01-12 12:37 PST (History)
5 users (show)

See Also:


Attachments
Patch (2.86 KB, patch)
2022-01-07 08:30 PST, Antoine Quint
darin: review+
ews-feeder: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Antoine Quint 2022-01-07 08:28:49 PST
Transitions without an explicit property-name should not be considered
Comment 1 Antoine Quint 2022-01-07 08:30:44 PST
Created attachment 448595 [details]
Patch
Comment 2 Antoine Quint 2022-01-07 10:57:00 PST
Committed r287764 (245827@trunk): <https://commits.webkit.org/245827@trunk>
Comment 3 Radar WebKit Bug Importer 2022-01-07 10:57:28 PST
<rdar://problem/87261676>