Transitions without an explicit property-name should not be considered https://bugs.webkit.org/show_bug.cgi?id=234960

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Mark WPT progression.

* web-platform-tests/css/css-transitions/events-004-expected.txt:

Source/WebCore:

When we fill the transition-property to match the number of another `transition-`
property, we should not consider running a transition for that property.

* style/Styleable.cpp:
(WebCore::transitionMatchesProperty):


Canonical link: https://commits.webkit.org/245827@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287764 268f45cc-cd09-0410-ab3c-d52691b4dbfc